# monster-shuffle

./: .gitignore  Cargo.toml  FASE_4_RESUMEN.md  PLAN_FRONTEND_VGC_INDICATORS.md  VGC_IMPLEMENTATION_PLAN.md  VGC_PROGRESS_TRACKER.md
core/: Cargo.toml
core/src/: battle.rs  experience.rs  factory.rs  game.rs  lib.rs  models.rs
core/src/battle/: ability_logic.rs  checks.rs  context.rs  effects.rs  mechanics.rs  mod.rs  pipeline.rs  targeting.rs
core/src/battle/infrastructure/: mod.rs  move_data_loader.rs  pokemon_accessor.rs
core/src/battle/orchestration/: battle_engine.rs  mod.rs
core/src/battle/systems/: integration_tests.rs  mod.rs
core/src/battle/tests/: effects_tests.rs  helpers.rs  mechanics_tests.rs  mod.rs  pipeline_tests.rs
scripts/: README.md  package-lock.json  package.json  seed_all.ts  seed_items.ts  seed_moves.ts  seed_pokedex.ts  tsconfig.json
server/: Cargo.toml
server/data/: items.json  moves.json  pokedex.json
server/src/: main.rs  state.rs
server/src/handlers/: battle.rs  game.rs  management.rs  mod.rs  moves.rs
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  api.ts  types.ts
web/src/components/: BattleScreen.tsx  EncounterSelection.tsx  GameOverModal.tsx  HealthBar.tsx  ItemIcon.tsx  MapScreen.tsx  NewGameForm.tsx  PokemonSprite.tsx  PokemonSwitchModal.tsx  StartScreen.tsx  StarterSelection.tsx  StatModifiers.tsx  StatusBadge.tsx  TargetSelectionModal.tsx  TeamManagement.tsx  TeamScreen.tsx  TerrainIndicator.tsx  VictoryScreen.tsx  WeatherIndicator.tsx
(+34 files in other folders)
