[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4"] }
core = { path = "../core" }

